--- a/response.tex
+++ b/response.tex
@@ -6,14 +6,17 @@
 \usepackage{graphicx}
 \author{R.B. Metcalf}
 \begin{document}
-Referee Report
+Response to Referee Report
+
+We thank the referee for his/her comments.  Below are these comments in bold face and our 
+responses to each one in non-bold.
 
 {\bf 
 Overall, this work is an important milestone towards exploring the usefulness of strong gravitational lenses in many applications in astrophysics, and after significant copy-editing and clarifications should be published.  I particularly agree that the emphasis on attempting to understand the most successful lens-candidate identification approaches and on the role of false positives is important. 
 
 The submitted manuscript is full of incorrectly assigned or compiled references.  The Sections’ organizational structure is incomplete and mis-referenced. Furthermore, the paper seems not to have been proof-read carefully as there are many minor grammatical and typesetting errors that are avoidable and distracting.  This includes typos within equations.  All of these must be corrected and scrupulously proof-read for re-submission.  }
 
-We acknowledge the poor proof reading of the draft.  There was some miscommunication about responsibilities between the authors.  We have edited the text more carefully and made many small corrections corrections. 
+We acknowledge the poor proof reading of the draft.  There was some miscommunication about responsibilities between the authors.  We have edited the text more carefully and made many small corrections corrections to the grammar, style and formatting.  We think that it is much improved now.
 
 {\bf
 The long-term goal of this collaboration of maturing algorithms for delivering automated gravitational lens detection across datasets as diverse as Euclid, LSST, and SKA, is timely and an important effort for the community.  Developing such flexible infrastructure is going to be challenging, and as the authors themselves point out, the realism of the simulated datasets will be an essential element. To that end, it makes sense that the present work gives a taste of what this may look like, by considering two parallel efforts in tandem, focusing on the single-band space-based Euclid and the multiple-band ground-based Kilo-Degree Survey (KiDS) datasets. 
@@ -23,13 +26,13 @@ The long-term goal of this collaboration of maturing algorithms for delivering a
 The paper seems to have been written towards an audience that is already closely familiar with gravitational lensing topics, which misses an opportunity to have a broader impact. For example, in stating “These take the form of multiple images of a quasar and Einstein rings surrounding a galaxy and of highly distorted arcs seen through galaxy groups and clusters.” conflates several lens geometries and situations in a way that e.g. a student would need to disentangle. 
 }
 
-The paper is generally targeted toward astronomers, but the point is taken.  The first paragraph of the introduction has been expanded to better describe gravitational lensing.  We do not wish to take up too much space describing the whole field when this can be read about elsewhere.
+The paper is generally targeted toward astronomers, but the point is taken.  The first paragraph of the introduction has been expanded to better describe gravitational lensing.  We do not wish to take up to much space describing the whole field when this can be read about elsewhere though.
 
 {\bf
 In the abstract (but nowhere else it seems) there is a summary result that “several methods are able to identify upwards of half the lenses”.  It seems that this is a statement of significance or interpretation and so it seems incomplete.  Or is it simply a statement of fact? 
 }
 
-This is referred to in paragraph 4 of section 6.2.  It is a conclusion drawn from figures 9 and 10.  It is also mentioned in the first paragraph of the conclusion where we added a reference to the figures it is based on.
+This is referred to in paragraph 4 of section 6.2.  It is a conclusion drawn from figures 9 and 10.  It is also mentioned in the first paragraph of the conclusion where we added a reference to the figures it is based on.  It is a statement of fact, but the fraction of identified lenses is a function of the threshold that defines what is and is not a lens so it is not a simply stated fact.  The information is contained in the plots however.
 
 {\bf
 What was the rationale for the 20.000 size of the training sets and the choice of the 101x101 pixels? 
@@ -41,7 +44,7 @@ No particularly rational reason.  The 101x101 pixels originally was the size of 
 The challenge dataset is stated as having 100.000 objects, and in one place only there is a reference that in “the case of the multi-band ground-based set this was 400,000 images.”  There’s never another reference to the 400.000, however, so this setup description is confusing or incomplete. 
 }
 
-It is clearly stated several times that there were 4 bands in the ground based set which makes 400,000 images for 100,000 objects.
+It is stated several times that there were 4 bands in the ground based set which makes 400,000 images for 100,000 objects.  We have tried to make this clearer.
 
 {\bf
 Understanding how the simulation set was prepared is significant for understanding the entire project and its results.  The Millennium simulation was used to identify galaxies.  The generally available Millennium catalog is at redshift zero, rather than at the various lens-plane redshifts given.  If some epoch-matching was made, please explain this, or justify the use of redshift-zero galaxy properties.  I do note a description of the adopted catalog being projected to a series of twenty lens planes with the total deflection calculated through a sum, but remain unclear about the process.  I also do not follow what “A NFW profile is fit to the [total mass, size, and half mass radius] parameters” actually means for this application.  As galaxies identified within Millennium were used, these are generally sub-critical to strong lensing, unless an additional central baryonic steepening has been applied. Please clarify.  
@@ -55,7 +58,7 @@ This parameters are fit so that the mass, size and half mass radius are the same
 In the Introduction’s description of imaging searches for lenses, references to past work is quite incomplete, and it would be appreciated to have these developed further.  For example, while there is a passing reference to the Marshall et al HAGGLeS work, this is arguably a significant precursor to the present paper so it is surprising that it is not discussed at all.  I think that giving depth of context to readers is critical for this paper. 
 }
 
-We have added a little more discussion of this paper in the introduction and conclusion.
+We have added more discussion of this paper in the introduction and conclusion.
 
 {\bf
 The dismissal of spectroscopic surveys for lenses seems flippant in addition to being incomplete. There are several spectroscopic lens projects after SLACS, and if the spectroscopic approach does return “well defined and pure” samples, it seems that at least some reference to the potential of DESI and PFS is expected to be in comparison to imaging surveys. 
@@ -67,7 +70,9 @@ We added a reference to these instruments in the introduction.
 It is good to see arc finders included in this challenge, though there is scant quantitative information about how the analysis was set up with these techniques to be able to judge or comment on them. In a comment related to the CNNs’ below, what are development or advancement areas that the Arc Finder community already knew, or learned based on this work, that will be addressed in the future?  
 }
 
-?????
+Details of these methods are in the cited papers.  The arc finders where not able to match the performance 
+of the CNNs here, but in this challenge supervised learning is used to train the CNNs while the arc finders were not developed to take full advantage of this particular data set.  The real data will not come with labels so the arc finders might be more competitive in reality.  The creators of the arc finders did not think they should invest large amounts of time to optimize their codes to fit these particular data sets when they 
+realized that the CNNs were likely to out perform them in this situation.  The performance of the arc finders  should really be considered separately from the other methods. 
 
 {\bf
 The Machine Learning / Support Vector Machine approaches seem clear enough, though these sections also include spare or undefined information.  I happen to know that AUC means area under a curve and how it pertains to the ROC exercise at hand, but this is quite mysterious and incomplete as presented. This can and must be improved significantly in the re-editing of the manuscript.}
@@ -77,7 +82,7 @@ Yes, unfortunately the ROC is not defined until section 6.1.  We have put in a r
 {\bf Incidentally, the “AUC of 0.88 for the space set and 0.95 for the ground set” stated in section 5.3.1 are different numbers from what are given in Tables 3 \& 4, further casting doubt on the validation of all results here.  
 }
 
-That is the AUC on the training set not the challenge set.
+That is the AUC on the training set not the challenge set.  We have made this clearer.
 
 {\bf
 The Convolutional Neural Networks general description is well done.  This is a complex and rich topic that is certainly still developing within astrophysics, and this section gives enough sense of the uncertainty and nuance behind exactly how the network methodologies may be set up for particular analyses.  Note that “neurones” are “neurons”, suggesting that additional care is needed in verifying the presentation in this section.   
@@ -91,7 +96,7 @@ How the training sets are handled by each CNN approach is very interesting readi
 In fact, some of the algorithm descriptions are rather spare in their details, and so difficult to judge or intercompare.  The reader (and this referee) is forced to take much at face value, which perhaps is acceptable for the scope of an “overview” report such as this.  It is a little disappointing, all the same.  A uniform template in the structure of each contributor’s report could have helped mitigate that, so that similar context or informational questions would at least have a chance of being reported.  The additional descriptive detail given by some of the contributors, in particular LASTRO, GAMOCLASS, and CAST are appreciated. 
 }
 
-Yes, this was difficult to pinpoint.  The very large number of possible CNN configurations and the lack of overlaps between the methods tested makes it hard to conclude what specifically about architecture of one CNN makes it better than another.   The performance of a CNN will also depend critically on the nature of the data.  The best CNN for one data set might not be the best one for another data set so they will need to be developed for specific surveys using real data in the training process.  This study can be 
+Yes, this was difficult to pinpoint.  The very large number of possible CNN configurations and the lack of overlaps between the methods tested make it hard to conclude what specifically about architecture of one CNN makes it better than another.   The performance of a CNN will also depend critically on the nature of the data.  The best CNN for one data set might not be the best one for another data set so they will need to be developed for specific surveys using real data in the training process.  This study can be 
 viewed as an exploration of how properties of the data (noise, pixel size, psf, etc.) and the data simulations affect lens finding rather than a systematic study of how to build the best lens finder.
 
 {\bf
@@ -106,7 +111,7 @@ An accurate representation of these objects is promised for future work. Can the
 }
 
 We are working on this.  There are several approaches we are considering.  They would 
-involve randomizing existing images.
+involve randomizing existing images.  This is beyond the scope of this paper.
 
 {\bf
 This referee agrees forcefully with the statement in the Conclusions \& Discussion section that application of SVM and CNN methods have “some danger of over-fitting to the training set”, and that there is enormous weight on how realistic the simulations are.  This discussion draws no conclusions, however, about how confident the community may reasonable expect to become with this or future work, and how to get there.  A brief discussion of this should be included.  
@@ -124,7 +129,7 @@ The overall conclusion or claim that ground-based multi-band data are more succe
 
 It is true that mono-band space based data might not be a big step up for this purpose, but 
 multi-band data exists and even if it is of lower resolution, as it will be for Euclid, it should 
-make space based searches more successful than ground based ones.  Yes, we are fallowing 
+make space based searches more successful than ground based ones.  Yes, we are following 
 up with Euclid UV simulations.  We have tried to change this impression by adding a note to the abstract.
 
 \end{document}
