--- a/references.bib
+++ b/references.bib
@@ -1710,3 +1710,17 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016SPIE.9908E..1MT},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@incollection{krizhevsky_imagenet_2012,
+  title = {{{ImageNet Classification}} with {{Deep Convolutional Neural Networks}}},
+  timestamp = {2016-07-18T09:53:04Z},
+  urldate = {2016-01-27},
+  booktitle = {Advances in {{Neural Information Processing Systems}} 25},
+  publisher = {{Curran Associates, Inc.}},
+  author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
+  editor = {Pereira, F. and Burges, C. J. C. and Bottou, L. and Weinberger, K. Q.},
+  year = {2012},
+  keywords = {toread},
+  pages = {1097--1105},
+}
+
