--- a/references.bib
+++ b/references.bib
@@ -134,18 +134,25 @@
 	Year = {2015},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1038/nature14539}}
 
-@article{Lanusse2017,
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170302642L},
-	Archiveprefix = {arXiv},
-	Author = {{Lanusse}, F. and {Ma}, Q. and {Li}, N. and {Collett}, T.~E. and {Li}, C.-L. and {Ravanbakhsh}, S. and {Mandelbaum}, R. and {Poczos}, B.},
-	Eprint = {1703.02642},
-	Journal = {ArXiv e-prints},
-	Keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
-	Month = mar,
-	Primaryclass = {astro-ph.IM},
-	Title = {{CMU DeepLens: Deep Learning For Automatic Image-based Galaxy-Galaxy Strong Lens Finding}},
-	Year = 2017}
+
+@ARTICLE{Lanusse2017,
+   author = {{Lanusse}, F. and {Ma}, Q. and {Li}, N. and {Collett}, T.~E. and 
+	{Li}, C.-L. and {Ravanbakhsh}, S. and {Mandelbaum}, R. and {P{\'o}czos}, B.
+	},
+    title = "{CMU DeepLens: deep learning for automatic image-based galaxy-galaxy strong lens finding}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1703.02642},
+ primaryClass = "astro-ph.IM",
+ keywords = {gravitational lensing: strong, methods: statistical},
+     year = 2018,
+    month = jan,
+   volume = 473,
+    pages = {3895-3906},
+      doi = {10.1093/mnras/stx1665},
+   adsurl = {http://adsabs.harvard.edu/abs/2018MNRAS.473.3895L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{he2015deep,
 	Author = {Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
@@ -761,18 +768,6 @@ archivePrefix = "arXiv",
 	Year = {2015}}
 
 @misc{Bastien_2012,
-	Abstract = {Theano is a linear algebra compiler that
-optimizes a user's symbolically-specified
-mathematical computations to produce efficient low-level
-implementations. In
-this paper, we present new features and efficiency improvements
-to Theano, and
-benchmarks demonstrating Theano's performance relative to
-Torch7, a recently
-introduced machine learning library, and to RNNLM, a C++ library
-targeted at
-￼￼￼
-recurrent neural networks.},
 	Author = {Bastien, Fr{\'{e}}d{\'{e}}ric and Lamblin, Pascal and Pascanu, Razvan and Bergstra, James and Goodfellow, Ian J. and Bergeron, Arnaud and Bouchard, Nicolas and Bengio, Yoshua},
 	Howpublished = {Deep Learning and Unsupervised Feature Learning NIPS 2012 Workshop},
 	Title = {Theano: new features and speed improvements},
